--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -47,7 +47,6 @@
           </property>
           <property name="font">
            <font>
-            <family>Liberation Sans</family>
             <pointsize>26</pointsize>
             <kerning>true</kerning>
            </font>
@@ -85,9 +84,7 @@
           </property>
           <property name="font">
            <font>
-            <family>Liberation Sans</family>
             <pointsize>31</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -109,7 +106,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>60</width>
+            <width>50</width>
             <height>20</height>
            </size>
           </property>
@@ -137,7 +134,6 @@
           </property>
           <property name="font">
            <font>
-            <family>Liberation Sans</family>
             <pointsize>16</pointsize>
            </font>
           </property>
@@ -162,9 +158,7 @@
           </property>
           <property name="font">
            <font>
-            <family>Liberation Sans</family>
             <pointsize>16</pointsize>
-            <weight>75</weight>
             <italic>false</italic>
             <bold>true</bold>
             <underline>false</underline>
@@ -185,7 +179,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>60</width>
+            <width>50</width>
             <height>20</height>
            </size>
           </property>
@@ -207,7 +201,6 @@
           </property>
           <property name="font">
            <font>
-            <family>Liberation Sans</family>
             <pointsize>18</pointsize>
             <kerning>true</kerning>
            </font>
@@ -245,9 +238,7 @@
           </property>
           <property name="font">
            <font>
-            <family>Liberation Sans</family>
             <pointsize>18</pointsize>
-            <weight>50</weight>
             <bold>false</bold>
            </font>
           </property>
@@ -256,6 +247,36 @@
           </property>
           <property name="text">
            <string>□</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>50</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_import">
+          <property name="text">
+           <string>Import</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_export">
+          <property name="text">
+           <string>Export</string>
           </property>
          </widget>
         </item>
@@ -291,11 +312,57 @@
      <x>0</x>
      <y>0</y>
      <width>760</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuEinstellungen">
+    <property name="title">
+     <string>Einstellungen</string>
+    </property>
+    <widget class="QMenu" name="menuAutostart">
+     <property name="title">
+      <string>Autostart</string>
+     </property>
+     <addaction name="actionAktivieren"/>
+     <addaction name="actionDeaktivieren"/>
+    </widget>
+    <widget class="QMenu" name="menuPi_Addresse">
+     <property name="title">
+      <string>Pi Addresse</string>
+     </property>
+     <addaction name="action127_0_0_1"/>
+     <addaction name="separator"/>
+     <addaction name="actionNeue_Addresse_festlegen"/>
+    </widget>
+    <addaction name="menuAutostart"/>
+    <addaction name="menuPi_Addresse"/>
+   </widget>
+   <addaction name="menuEinstellungen"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionAktivieren">
+   <property name="text">
+    <string>Aktivieren</string>
+   </property>
+  </action>
+  <action name="actionDeaktivieren">
+   <property name="text">
+    <string>Deaktivieren</string>
+   </property>
+  </action>
+  <action name="action127_0_0_1">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>127.0.0.1:2000</string>
+   </property>
+  </action>
+  <action name="actionNeue_Addresse_festlegen">
+   <property name="text">
+    <string>Neue Addresse festlegen</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
